<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cardview_compat_inset_shadow">

            <TextView
                android:id="@+id/pos_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos3"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos9"
                android:textSize="36sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pos_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos2"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos5"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos8"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos10"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pos_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos1"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos4"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/pos7"
                android:textSize="36sp" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/right_sign"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sajeung" />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/btn_bg"
        android:text="@string/left_sign"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sajeung" />

    <TextView
        android:id="@+id/tv_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/num_default"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_right"
        app:layout_constraintStart_toEndOf="@+id/btn_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_sajeung" />

    <TextView
        android:id="@+id/tv_sajeung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="사증 : "
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>