<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_compat_inset_shadow">

            <TextView
                android:id="@+id/pos_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/pos3"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/pos6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/pos9"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pos_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/pos2"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/pos5"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/pos8"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/pos10"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pos_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pos1"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pos4"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/pos_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pos7"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1번부터 10번까지 오름차순으로 철번호를 배치합니다"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tag_copyright"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info" />

</androidx.constraintlayout.widget.ConstraintLayout>
